--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -86,6 +86,12 @@
   "social": {
     "heading": "இளங்கோவை தொடருங்கள்"
   },
+
+  "contact": {
+    "heading": "எங்களை தொடர்பு கொள்ளுங்கள்",
+    "description": "உங்கள் கேள்விகள் அல்லது கருத்துகளுக்கு எப்போதும் வரவேற்கின்றோம்.",
+    "cta": "தொடர்பு கொள்ள"
+  },
   "contact_us": "எங்களை தொடர்பு கொள்ளுங்கள்",
   "first_name": "முதல் பெயர்",
   "last_name": "கடைசி பெயர்",
