--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -218,6 +218,29 @@
       "pay": "பணம் செலுத்தவும்"
     }
   },
+  "products": {
+    "title": "தொலைவிலிருந்து வாங்கக்கூடிய பொருட்கள்",
+    "items": [
+      {
+        "title": "தியான ஒலி",
+        "description": "அமைதியாக இருக்க மற்றும் உங்கள் மனதைக் குளிர்விக்க ஒரு வழிகாட்டும் தியானம்.",
+        "price": "₹100",
+        "url": "https://buy.stripe.com/test_xyzMeditation"
+      },
+      {
+        "title": "வாய்ஸ் ஓவர் (குரல் பதிவு)",
+        "description": "உங்கள் பிராஜெக்டுகளுக்கான தொழில்முறை குரல் பதிவு.",
+        "price": "₹300",
+        "url": "https://buy.stripe.com/test_xyzVoiceover"
+      },
+      {
+        "title": "அசல் பாடல்",
+        "description": "இலங்கோவின் இசை படைப்பாகும் புதிய பாடல்.",
+        "price": "₹200",
+        "url": "https://buy.stripe.com/test_xyzSong"
+      }
+    ]
+  },
   "events": {
     "header": {
       "title": "எங்கள் நிகழ்வுகளில் சேருங்கள்",
