--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -93,8 +93,7 @@
     "cta": "தொடர்பு கொள்ள"
   },
   "contact_us": "எங்களை தொடர்பு கொள்ளுங்கள்",
-  "first_name": "முதல் பெயர்",
-  "last_name": "கடைசி பெயர்",
+  "name": "பெயர்",
   "email": "மின்னஞ்சல் ஐடி",
   "contact_number": "தொடர்பு எண்",
   "your_message": "உங்கள் செய்தி",
