--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -240,6 +240,27 @@
       }
     ]
   },
+  "brochures": {
+    "title": "எங்கள் விளக்கக் கையேடுகளை பதிவிறக்குங்கள்",
+    "brochure1": {
+      "title": "விளக்கக் கையேடு 1",
+      "description": "எங்கள் முதன்மை சேவைகள் பற்றிய தகவல்கள்.",
+      "download": "PDF பதிவிறக்குக",
+      "alt": "விளக்கக் கையேடு 1 முகப்பு"
+    },
+    "brochure2": {
+      "title": "விளக்கக் கையேடு 2",
+      "description": "ஆலோசனை திட்டங்கள் பற்றிய விரிவான விளக்கம்.",
+      "download": "PDF பதிவிறக்குக",
+      "alt": "விளக்கக் கையேடு 2 முகப்பு"
+    },
+    "brochure3": {
+      "title": "விளக்கக் கையேடு 3",
+      "description": "விலை மற்றும் திட்டங்கள் பற்றி விளக்கம்.",
+      "download": "PDF பதிவிறக்குக",
+      "alt": "விளக்கக் கையேடு 3 முகப்பு"
+    }
+  },
   "events": {
     "header": {
       "title": "எங்கள் நிகழ்வுகளில் சேருங்கள்",
