--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -8,7 +8,9 @@
     "navEvents": "நிகழ்ச்சிகள்",
     "navContact": "தொடர்பு கொள்ள",
     "navMembership": "சந்தா",
-    "navAdmin": "நிர்வாகி"
+    "navAdmin": "நிர்வாகி",
+    "navVIIF": "VIIF",
+    "navAcePanacea": "Ace Panacea Life Skills Private Limited"
   },
   
   "hero": {
@@ -110,6 +112,8 @@
     "links": {
       "heading": "விரைவுப் இணைப்புகள்",
       "home": "முகப்பு",
+      "viif": "VIIF",
+      "acePanacea": "ஏஸ் பனாசியா லைஃப் ஸ்கில்ஸ் ப்ரைவேட் லிமிடெட்",
       "about": "எங்களை பற்றி",
       "services": "சேவைகள்",
       "events": "நிகழ்வுகள்",
