--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -9,7 +9,7 @@
     "navMembership": "Membership",
     "navAdmin": "Admin",
     "navVIIF": "VIIF",
-    "navAcePanacea": "ஏஸ் பனாசியா லைஃப் ஸ்கில்ஸ் ப்ரைவேட் லிமிடெட்"
+    "navAcePanacea": "Ace Panacea Life Skills Private Limited"
   },
   "hero": {
     "title": "Dr. Inspiring Ilango",
