--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -10,7 +10,7 @@
     "navMembership": "சந்தா",
     "navAdmin": "நிர்வாகி",
     "navVIIF": "VIIF",
-    "navAcePanacea": "Ace Panacea Life Skills Private Limited"
+    "navAcePanacea": "ஏஸ் பனாசியா லைஃப் ஸ்கில்ஸ் ப்ரைவேட் லிமிடெட்"
   },
   
   "hero": {
