--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -129,66 +129,95 @@
       "location": "இடம்: எண்: 16, 600042, 12, ஸ்ரீநிவாச நகர் 2வது வீதி, ராம் நகர், தேவி கருமாரியம்மன் நகர், மோகன்புரி, வேளச்சேரி, சென்னை, தமிழ்நாடு 600042"
     }
   },
-  "VIIF": {
-    "heading1": "உத்வேகமான இலங்கை",
-    "heading2": "வாழ்கையை மாற்றுவது",
-    "heading3": "நம்பிக்கையை ஊக்குவித்தல்",
-    "aboutTitle": "அறக்கட்டளை பற்றி",
-    "aboutDescription": "விஷன் இன்ஸ்பைரிங் இலங்கை ஃபவுண்டேஷன் (VIIF) என்பது உணர்ச்சி மேம்பாடு, ஒப்புமை மேம்பாடு மற்றும் வாழ்க்கையை மாற்றக்கூடிய பயிற்சித் திட்டங்களுக்கு அர்ப்பணிக்கப்பட்ட, பதிவு செய்யப்பட்ட, லாபமில்லாத, அரசு சாரா நிறுவனம். டாக்டர் இன்ஸ்பைரிங் இலங்கை மற்றும் திருமதி ஸ்ரீலதா இலங்கோ ஆகியோரால் இணைந்து தொடங்கப்பட்ட இந்த அறக்கட்டளை, உணர்ச்சி நெருக்கடி, அமைப்புசார் புறக்கணிப்பு அல்லது சமூக இழிவுறுத்தலை எதிர்கொள்கின்ற தனிநபர்கள் மற்றும் சமூகங்களுக்கு பாதுகாப்பான இடமாக விளங்குகிறது.",
-    "visionTitle": "எங்கள் பார்வை",
-    "visionDescription": "உணர்ச்சி பாதிப்பு, அடிமை, டிஜிட்டல் சார்பு மற்றும் உள்ளுணர்வு அடக்குமுறையால் பாதிக்கப்பட்ட வாழ்க்கைகளை முழுமையாக மாற்றுவதே எங்கள் நோக்கம். எல்லோருக்கும் மரியாதை, உணர்ச்சி சுயாதீனம், சமத்துவம், கருணை மற்றும் உலகளாவிய மனித மதிப்பு கொண்ட உலகைக் காண விரும்புகிறோம்.",
-    "missionTitle": "எங்கள் பணி",
-    "missionDescription": "ஊக்குவிக்கக்கூடிய திட்டங்கள், அணுகக்கூடிய பயிற்சிகள் மற்றும் கருணையுள்ள தலையீடுகள் மூலமாக உணர்ச்சி சுதந்திரத்தை ஊக்குவிப்பதே எங்கள் பணி — குறிப்பாக பார்வை சவால்களைக் கொண்டோர் மற்றும் உணர்ச்சி ரீதியாக பாதிக்கப்பட்டோருக்காக. எல்லோருக்கும் உணர்ச்சி சுதந்திரம், மன தெளிவு மற்றும் உளவியல் தாக்குத் திறன் கிடைக்கக்கூடியதாக்குவதே எங்கள் இலக்கு.",
-    "whyNowTitle": "ஏன் இப்போது முக்கியம்",
-    "globalStats": "ஒவ்வொரு 40 விநாடிகளுக்கும் ஒருவர் தற்கொலை செய்கிறார்கள் — ஆண்டுக்கு 7 லட்சத்திற்கு மேல் (WHO). 15–29 வயதுடையோருக்குள் இது மூன்றாவது முக்கியமான மரண காரணியாகும்.",
-    "indiaStats": "உலகளாவிய தற்கொலை மரணங்களில் இந்தியாவின் பங்கு 20%. 2021-ல் இந்தியாவில் 1,64,033 பேர் தற்கொலை செய்து கொண்டனர் — இது கடந்த வருடத்தைவிட 7.2% அதிகம். தமிழ்நாடு 18,925 வழக்குகளை பதிவு செய்தது; மகாராஷ்டிரா 22,207 வழக்குகளுடன் முன்னிலையில் உள்ளது.",
-    "economicToll": "தற்கொலை மற்றும் மனநலம் தொடர்பான பிரச்சனைகள் உற்பத்தித்திறன் மற்றும் பொருளாதாரத்தை குறைக்கும். தமிழ்நாட்டின் மொத்த உள்நாட்டு உற்பத்திக்கு இது நேரடி தாக்கம் செய்கிறது.",
-    "professionalShortage": "இந்தியாவில் ஒரு இலட்சம் மக்களுக்கு 0.75 மனநல நிபுணர்களே உள்ளனர் — உலக சீர்மட்டமான 3–6-க்குக் குறைவானது. கோடிக்கணக்கானோர் பயிற்சி பெற்ற ஆதரவுக்காக காத்திருக்கின்றனர்.",
-    "initiativesTitle": "எங்கள் முக்கிய முயற்சிகள்",
-    "initiative1.title": "ஹோப் லைன் – 24/7 மனநலம் மையம்",
-    "initiative1.description": "பயிற்சி பெற்ற மனநல நிபுணர்களால் 24 மணி நேர உணர்ச்சி ஆதரவும் அவசரத் தலையீடுகளும் வழங்கப்படுகின்றன.",
-    "initiative2.title": "இன்ஸ்பிடெயின்மெண்ட்™ – ஊக்கமும் பொழுதுபோக்கும்",
-    "initiative2.description": "முன்னிலை உரைகள், இசை, கலந்துரையாடல்கள் மற்றும் மனநல அறிவுரைகள் இணைந்த நிகழ்ச்சிகள்.",
-    "initiative3.title": "பார்வை திறன் – பார்வை சவால் உள்ளவர்களுக்கு டிஜிட்டல் கல்வி",
-    "initiative3.description": "சாதனத் தொழில்நுட்பம், தொடர்பு திறன் மற்றும் டிஜிட்டல் திறனை மேம்படுத்தும் பயிற்சிகள்.",
-    "initiative4.title": "உயர்நிலை நட்சத்திரங்கள் – இளையோர் முன்னேற்றம்",
-    "initiative4.description": "பின்னடைந்த மாணவர்களுக்கு உணர்ச்சி நுண்ணறிவு, ஆங்கிலம் மற்றும் தலைமை திறனை வளர்க்கும் திட்டம்.",
-    "initiative5.title": "வாழும் வாழ்க்கை – மனநல விழிப்புணர்வு",
-    "initiative5.description": "மன உறுதி, நம்பிக்கை மற்றும் முன்னெச்சரிக்கையுடன் மனநலத்தை வளர்க்கும் விழிப்புணர்வு நிகழ்ச்சிகள்.",
-    "initiative6.title": "வாக்களிக்கவும் – ஆங்கில மொழி சுதந்திரம்",
-    "initiative6.description": "முன்னிலை பேச்சு மற்றும் தொடர்பு பயிற்சிகள் — கிராமம் மற்றும் புறநகர் பகுதிகளுக்காக.",
-    "initiative7.title": "அவளுக்கு அதிகாரம் – பெண்களின் நலன் மற்றும் தலைமை",
-    "initiative7.description": "தொழில் முனைவோர் பயிற்சி, உரிமை மற்றும் உணர்ச்சி வலிமைக்கு பயிற்சிகள்.",
-    "initiative8.title": "மனநல மருத்துவ மையங்கள் – ஆலோசனை மற்றும் குழு சிகிச்சை",
-    "initiative8.description": "மன அழுத்தம், பதட்டம், பீதி, கடைசி கட்ட சோர்வு ஆகியவற்றுக்கு ஆலோசனை.",
-    "initiative9.title": "ப்ரீரக வாழ்வு – உரைகள் மற்றும் நிகழ்வுகள்",
-    "initiative9.description": "இலங்கோ மற்றும் மற்ற நிபுணர்களால் நடத்தப்படும் இலக்குடன் உரைகள் மற்றும் நிகழ்ச்சிகள்.",
-    "initiative10.title": "விலகல் – அடிமை பற்றிய விழிப்புணர்வு",
-    "initiative10.description": "அடிமை மற்றும் உணர்ச்சி சிகிச்சை பற்றி குறும்படங்கள் மற்றும் பயிற்சிகள்.",
-    "initiative11.title": "ஆரோக்கியமான தேர்வுகள் – உணவு மற்றும் மனநிலை",
-    "initiative11.description": "உணவின் மூலம் உணர்ச்சி நலம் மற்றும் நீண்டநாள் நலம் பற்றி விழிப்புணர்வு.",
-    "initiative12.title": "முழுமையான நலம் – வாழ்க்கை முறை மற்றும் மன ஒழுக்கம்",
-    "initiative12.description": "தூக்க ஒழுக்கம், உடற்பயிற்சி மற்றும் டிஜிட்டல் ஒழுக்கம் பற்றிய பயிற்சிகள்.",
-    "initiative13.title": "டிஜிட்டல் ஞானம் – தொழில்நுட்பம் எளிதாக",
-    "initiative13.description": "மாணவர்களுக்கு மற்றும் தொழில்முனைவோர்களுக்கு டிஜிட்டல் ஒழுக்கம் மற்றும் செயற்கை நுண்ணறிவு விளக்கங்கள்.",
-    "initiative14.title": "புத்திசாலித்தனமான பெற்றோர்கள்",
-    "initiative14.description": "உணர்ச்சி நுண்ணறிவு மற்றும் டிஜிட்டல் பாதுகாப்புடன் குழந்தைகளை வளர்ப்பதற்கான வழிகாட்டுதல்.",
-    "initiative15.title": "நம்பிக்கையின் நிதி – புற்றுநோய் நோயாளிகளுக்கு ஆதரவு",
-    "initiative15.description": "உயிர் அபாய நோய்கள் மற்றும் புற்றுநோய்களுக்கு நிதி மற்றும் உணர்ச்சி ஆதரவு.",
-    "foundersTitle": "எங்கள் நிறுவியர்கள் மற்றும் நம்பிக்கையாளர்கள்",
-    "founder1.name": "டாக்டர் இன்ஸ்பைரிங் இலங்கை – நிறுவனர் மற்றும் நிர்வாக நம்பிக்கையாளர்",
-    "founder1.bio": "உலக அளவிலான உரையாளர், உணர்ச்சி நுண்ணறிவு ஆலோசகர், சிறந்த எழுத்தாளர் மற்றும் சுயபயிற்சி பெற்ற பாடகர். பார்வை சவாலை உலகளாவிய தாக்கத்திற்கு மாற்றியவர். ஆழ்கடல் நீச்சல் மற்றும் ஒற்றை பராக் களிதல் ஆகியவற்றில் உலக சாதனை பெற்றவர்.",
-    "founder2.name": "ஸ்ரீலதா இலங்கை – நிறுவுநர் மற்றும் நம்பிக்கையாளர்",
-    "founder2.bio": "பெண்களின் அதிகாரம் மற்றும் திட்டமிடப்பட்ட தாக்கத்தை வழிநடத்துபவர். பயிற்சி மற்றும் ஊடகத் திட்டங்களை பத்திரமாக செயல்படுத்துகிறார்.",
-    "supportTitle": "நீங்கள் எங்களுக்குத் தேவை",
-    "supportDescription": "VIIF இந்திய அரசால் CSR நன்கொடைகளை பெற அனுமதிக்கப்பட்டுள்ளது. நாங்கள் தானம் நாடவில்லை — நாங்கள் வீரர்களை நாடுகிறோம். எங்கள் ஹோப் லைன் மையத்தை நிதி அளியுங்கள். எந்தவொரு திட்டத்தையும் ஆதரியுங்கள். ஒவ்வொரு நன்கொடையும் ஒரு உயிரை காப்பாற்றும். உணர்ச்சி நலனுக்கான ஒவ்வொரு உதவியும் வாழ்க்கையை மாற்றும்.",
-    "donationTitle": "நன்கொடைகள் (80G விலக்கு)",
-    "donation.icici": "கணக்கு பெயர் : Vision Inspiring Ilango Foundation\nகணக்கு எண் : 168001000906\nIFSC குறியீடு : ICIC0001680\nவங்கிக் கிளை : இந்திரா நகர், சென்னை\nSWIFT CODE : ICICINBBXXX",
-    "donation.axis": "கணக்கு எண் : 920010066165417\nIFSC குறியீடு : UTIB0003492\nவங்கிக் கிளை : அம்பத்தூர் தொழில்துறை பகுதி, சென்னை\nSWIFT CODE : AXISINBB211",
-    "contactTitle": "எங்களை தொடர்பு கொள்ள",
-    "contactInfo": "+91 44 4331 3170\n+91 99419 54545\ninfo@viif.in\nபுதிய எண் 16, பழைய எண் 12, இரண்டாம் தெரு, ராம்நகர், வேளச்சேரி, சென்னை – 600042\nஅடுத்த நெருக்கடியை எதிர்பாராதீர்கள். இன்று மாற்றத்தை ஊக்குவிக்க செயல் படுவோம்."
+  "Viif": {
+    "title": "உணர்ச்சி ஊக்கம் அளிக்கும் இலங்கோ",
+    "subtitle1": "வாழ்க்கைகளை மாற்றும்",
+    "subtitle2": "நம்பிக்கைகளை ஊட்டும்",
+    "about": {
+      "heading": "அமைப்பைப் பற்றி",
+      "description": "விஷன் இன்ஸ்பைரிங் இலங்கோ பவுண்டேஷன் (VIIF) ஒரு பதிவு செய்யப்பட்ட, லாப நோக்கமற்ற, அரசாங்கத்தால் அங்கீகரிக்கப்பட்ட தொண்டு நிறுவனம். இது உணர்ச்சி ஆதரவு, உள்ளடக்கிய வளர்ச்சி மற்றும் வாழ்க்கையை மாற்றும் பயிற்சி நிகழ்ச்சிகளுக்காக உருவாக்கப்பட்டுள்ளது."
+    },
+    "vision": {
+      "heading": "எங்கள் பார்வை",
+      "text": "உணர்ச்சி பாதிப்பு, போதை, டிஜிட்டல் அடிமைத்தனம் மற்றும் உள்முக ஒடுக்குமுறையால் பாதிக்கப்பட்ட வாழ்கைகளில் அடிக்கடி மாற்றத்தை உருவாக்குதல்."
+    },
+    "mission": {
+      "heading": "எங்கள் பணிக்கோலம்",
+      "text": "உணர்ச்சி சுதந்திரம் மற்றும் உளவியல் உறுதிமையை எல்லோருக்கும் எளிதில் கிடைக்கும் வகையில் செய்வது எங்கள் நோக்கமாகும், குறிப்பாக பார்வையற்ற மற்றும் உணர்ச்சிபூர்வமான முறையில் பாதிக்கப்பட்டவர்களுக்காக."
+    },
+    "why_now": {
+      "heading": "ஏன் இப்போது முக்கியம்?",
+      "global": "உலகளவில் வருடத்துக்கு 700,000 க்கும் மேற்பட்டோர் தற்கொலை செய்கிறார்கள் — ஒவ்வொரு 40 வினாடிக்கும் ஒருவர் (WHO).",
+      "india": "இந்தியா உலக தற்கொலை இறப்புகளில் 20% பங்கிடுகிறது. 2021 இல், இந்தியாவில் 1,64,033 தற்கொலைகள் பதிவு செய்யப்பட்டது.",
+      "economic": "தற்கொலை மற்றும் மனநலம் தொடர்பான சிக்கல்கள் உற்பத்தித்திறன் மற்றும் பொருளாதார வளர்ச்சியை குறைக்கின்றன."
+    },
+    "shortage": {
+      "heading": "மனநல நிபுணர்கள் பற்றாக்குறை",
+      "text": "இந்தியாவில் ஒவ்வொரு 1,00,000 மக்களுக்கும் 0.75 மனநல நிபுணர்கள் மட்டுமே உள்ளனர் — உலக அளவிலான சராசரியை விட குறைவாக உள்ளது."
+    },
+    "initiatives": {
+      "heading": "எங்கள் முக்கிய முயற்சிகள்",
+      "list": [
+        "ஹோப் லைன் – 24/7 மனநல ஆதரவு மையம்",
+        "இன்ஸ்பிடெயின்மென்ட் – ஊக்கம் மற்றும் பொழுதுபோக்கு இணைப்பு நிகழ்வுகள்",
+        "பார்வை சக்தி – பார்வையற்றோருக்கான டிஜிட்டல் கல்வி",
+        "உயரும் நட்சத்திரங்கள் – மாணவர்களுக்கான நாகரிக வளர்ச்சி",
+        "லைவ் லைஃப் முகாம் – மனநல விழிப்புணர்வு",
+        "ஸ்பீக் அப் – ஆங்கிலம் மூலம் தன்னம்பிக்கை",
+        "எம்பவர் ஹர் – பெண்களுக்கான நலன் மற்றும் தலைமை பயிற்சி",
+        "உணர்ச்சி நலம் கிளினிக்குகள் – கவுன்சிலிங் மற்றும் குழு சிகிச்சை",
+        "இன்ஸ்பயர்ட் லிவிங் – இலங்கோ மற்றும் நிபுணர்களின் பேச்சுகள்",
+        "பிரேக்கிங் ஃப்ரீ – போதை பற்றிய விழிப்புணர்வு",
+        "ஹெல்த்தி சாய்ஸஸ் – உணவு மற்றும் உணர்ச்சிகள் பற்றிய விழிப்புணர்வு",
+        "ஒளிரும் வாழ்வு – வாழ்க்கை முறையும் கவனமும்",
+        "டிஜிட்டல் ஞானம் – தொழில்நுட்பத்தின் புத்திசாலித்தனமான பயன்பாடு",
+        "ஸ்மார்ட் பேரன்டிங் – குழந்தைகளை வளர்ப்பதற்கான வழிகாட்டி",
+        "ஹோப் ஃபண்ட் – புற்றுநோயாளிகளுக்கான ஆதரவு"
+      ]
+    },
+    "founders": {
+      "heading": "நிறுவனர் மற்றும் அறங்காவலர்கள்",
+      "ilango": {
+        "name": "டாக்டர் இன்ஸ்பைரிங் இலங்கோ",
+        "role": "நிறுவனர் மற்றும் நிர்வாக அறங்காவலர்",
+        "bio": "உலகப் புகழ்பெற்ற பேச்சாளர், உணர்ச்சி நிபுணர் மற்றும் உலக சாதனையாளரான இலங்கோ அவர்கள் பார்வை இழப்பை அவருடைய பலமாக மாற்றியவர்."
+      },
+      "srilatha": {
+        "name": "ஸ்ரீலதா இலங்கோ",
+        "role": "நிறுவனர் மற்றும் அறங்காவலர்",
+        "bio": "பெண்கள் நலத்திற்கும் திட்டமிடல் செயல்திறனுக்குமான போராளி, VIIF மற்றும் Ace Panacea நிறுவனங்களில் முக்கிய பாத்திரம் வகிக்கிறார்."
+      }
+    },
+    "donation": {
+      "heading": "உங்கள் பங்களிப்பு எங்களுக்கு தேவையானது",
+      "text": "VIIF இந்திய அரசாங்கத்தின் CSR பங்களிப்புகளுக்குத் தகுதி பெற்ற நிறுவனம். நன்கொடையை அல்ல, நம்பிக்கையாளர்களை தேடுகிறோம்.",
+      "accounts": [
+        {
+          "bank": "ஐசிஐசிஐ வங்கி",
+          "account_name": "Vision Inspiring Ilango Foundation",
+          "account_no": "168001000906",
+          "ifsc": "ICIC0001680",
+          "branch": "இந்திரா நகர், சென்னை",
+          "swift": "ICICINBBXXX"
+        },
+        {
+          "bank": "ஆக்ஸிஸ் வங்கி",
+          "account_no": "920010066165417",
+          "ifsc": "UTIB0003492",
+          "branch": "அம்பத்தூர் இண்டஸ்ட்ரியல் எஸ்டேட், சென்னை",
+          "swift": "AXISINBB211"
+        }
+      ]
+    },
+    "contacts": {
+      "heading": "எங்களை அணுகுங்கள்",
+      "phone1": "+91 44 4331 3170",
+      "phone2": "+91 99419 54545",
+      "email": "info@viif.in",
+      "address": "புதிய எண் 16, பழைய எண் 12, இரண்டாவது தெரு, ராம்நகர், வேளச்சேரி, சென்னை – 600042"
+    },
+    "call_to_action": "அடுத்த நெருக்கடியைப் பார்ப்பதற்காக காத்திருக்க வேண்டாம். இன்று செயல்படுவோம். மாற்றத்தை ஊக்குவிப்போம்!"
   },
-
 
   "about": {
     "title": "டாக்டர் இன்ஸ்பையரிங் இலங்கோ பற்றி",
