--- a/frontend/src/locales/ta.json
+++ b/frontend/src/locales/ta.json
@@ -2,6 +2,7 @@
 {
   "header": {
     "navHome": "முகப்பு",
+     "navHomepage": "இன்ஸ்பைரிங் இளங்கோ",
     "navAbout": "எங்களை பற்றி",
     "navServices": "சேவைகள்",
     "navBlogs": "பிளாக்கள்",
