--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "header": {
     "navHome": "Home",
-    "Homepage": "Inspiring Ilango",
+    "navHomepage": "Inspiring Ilango",
     "navAbout": "About",
     "navServices": "Services",
     "navBlogs": "Blogs",
